给增worker进程的虚拟机参数中增加gc log的参数